[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
opencv = "0.68.0"
anyhow = "1.0.65"
image = "0.24.4"
ndarray = "0.15.6"
#opencv = { path = "D:\\rust\\opencv-rust" }